@@ -2,6 +2,7 @@ Changes between 2.2 and 2.3:
 ----------------------------
   * Fix potential segfault in aggregartp
   * Do not do retx in reordertp with multicast inputs
+  * Add support for null weights in aggregartp and reordertp
 
 Changes between 2.1 and 2.2:
 ----------------------------
